# Freeverb3_JUCE

./: CMakeLists.txt  README.md
juce_plugin/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
